src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_13_lexical_analysis.snap
---
source: src/tests/mod.rs
expression: tokens

---
[
    Let,
    Identifier {
        literal: "UPPER_CASE_SNAKE_CASE",
    },
    Assign,
    False,
    SemiColon,
    EndOfFile,
]
