src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_14_environment.snap
---
source: src/tests/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "timeout_ms": Integer {
                value: 5,
            },
            "timeout_ms_copy": Integer {
                value: 5,
            },
        },
        sub_environment: None,
    },
}
