src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_14_syntax_analysis.snap
---
source: src/tests/mod.rs
expression: abstract_syntax_tree

---
[
    Statement {
        statement: Let {
            identifier: "timeout_ms",
            expression: Integer {
                literal: 5,
            },
        },
    },
    Statement {
        statement: Let {
            identifier: "timeout_ms_copy",
            expression: Identifier {
                identifier: "timeout_ms",
            },
        },
    },
]
