src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_15_environment.snap
---
source: src/tests/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "is_directory": True,
            "is_file": False,
        },
        sub_environment: None,
    },
}
