src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_15_lexical_analysis.snap
---
source: src/tests/mod.rs
expression: tokens

---
[
    Let,
    Identifier {
        literal: "is_file",
    },
    Assign,
    False,
    SemiColon,
    Let,
    Identifier {
        literal: "is_directory",
    },
    Assign,
    Not,
    Identifier {
        literal: "is_file",
    },
    SemiColon,
    EndOfFile,
]
