src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_15_syntax_analysis.snap
---
source: src/tests/mod.rs
expression: abstract_syntax_tree

---
[
    Statement {
        statement: Let {
            identifier: "is_file",
            expression: Boolean {
                boolean: False,
            },
        },
    },
    Statement {
        statement: Let {
            identifier: "is_directory",
            expression: Prefix {
                prefix: Not,
                right_hand: Identifier {
                    identifier: "is_file",
                },
            },
        },
    },
]
