src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_1_environment.snap
---
source: src/tests/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "sentence": String {
                value: "this is a multiple words...\n",
            },
        },
        sub_environment: None,
    },
}
