src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_2_environment.snap
---
source: src/tests/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "csv_content": String {
                value: "col_1\tcol_2\tcol_3\n",
            },
        },
        sub_environment: None,
    },
}
