src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_2_syntax_analysis.snap
---
source: src/tests/mod.rs
expression: abstract_syntax_tree

---
[
    Statement {
        statement: Let {
            identifier: "csv_content",
            expression: String {
                literal: "col_1\tcol_2\tcol_3\n",
            },
        },
    },
]
